# rusty_track

./: Cargo.toml
extras/: diagrama_relacional.mwb
migrations/2024-03-04-024712_farmaco/: down.sql  up.sql
migrations/2024-03-04-024720_paciente/: down.sql  up.sql
migrations/2024-03-04-024723_doctor/: down.sql  up.sql
migrations/2024-03-04-024728_consulta/: down.sql  up.sql
migrations/2024-03-04-032953_lote/: down.sql  up.sql
migrations/2024-04-06-043209_primera_version/: down.sql  up.sql
src/: main.rs  schema.rs
src/persisntence/entity/: cita.rs  empleado.rs  medicamento.rs  mod.rs  paciente.rs
src/persisntence/repository/: mod.rs
src/persistencia/: consulta.rs  mod.rs  paciente.rs
