[package]
name = "rustytrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.0"
diesel = { version = "2.1.0", features = ["mysql"] }
chrono = { version = "0.4.34", features = ["serde"] }  # "serde" es opcional, úsalo si necesitas serialización/deserialización
dotenvy = "0.15"
